--- a/.gitconfig
+++ b/.gitconfig
@@ -45,3 +45,6 @@
 [merge]
 	# Include summaries of merged commits in newly created merge commit messages
 	log = true
+	
+[push]
+  default = simple
