--- a/.inputrc
+++ b/.inputrc
@@ -36,5 +36,5 @@ set input-meta on
 set output-meta on
 set convert-meta off
 
-# Use Alt/Meta + Delete to delete the preceding word
-"\e[3;3~": kill-word
+# ctrl-d to kill the whole line of input.
+"\C-d": kill-whole-line
