--- a/.gitconfig
+++ b/.gitconfig
@@ -3,8 +3,8 @@
   s = status
   # d = "!sh -c 'git diff-index --quiet HEAD -- || clear; git diff --patch-with-stat'"
   # dc = "!sh -c 'git diff-index --quiet HEAD -- || clear; git diff --patch-with-stat --cached'"
-  d = difftool --no-prompt --extcmd icdiff
-  dc = difftool --cached --no-prompt --extcmd icdiff
+  d = "!sh -c 'git difftool --no-prompt --extcmd icdiff' | less -r"
+  dc = "!sh -c 'git difftool --cached --no-prompt --extcmd icdiff' | less -r"
   lg = "log --graph --pretty=format:'%Cred%h%Creset %Cgreen%cr%C(yellow)%d%Creset %s %C(dim white)%an%Creset' --abbrev-commit --date=relative"
   a = add
   aa = add -A
